--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ main();
         <div class="about__content">
           <div class="about__text">
             <p>
-              TODO 
+              LMU CMSI 2026 and Loyola Rugby president. Co-Creator of Quanco
             </p>
           </div>
         </div>
