--- a/index.html
+++ b/index.html
@@ -102,45 +102,85 @@
     <div class="row">
       <h2>Example Programs</h2>
 <body>
-    <h3>Defining and Calling a Funciion</h3>
+    <h3>Defining and Calling a Class</h3>
     <h4>Quanco</h4>
     <pre>
 <code>
-ruck greet(name: str) -> str {
-    pass "Try hard, " + name + "! Keep rucking!"
+class d {
+    def __init__(self, x: bool) {
+        this.valid: bool = x
+    }
+    def flipValid(self) -> void {
+        this.valid = not this.valid
+    }
 }
-
-result: str = greet("Julian")
-print(result)
-result: str = greet(name="Carson")
-print(result)
+example: d = d(true)
+variable: bool = d.valid
+d.flipValid()
 </code>
     </pre>
     <h4>JavaScript</h4>
     <pre>
 <code>
-function greet(name) {
-    return `Try hard, ${name}! Keep rucking!`;
+class d_1 {
+  constructor(x_2) {
+    this.valid_3 = x_2;
+  }
+  function flipValid_4(self) {
+    this.valid_3 = !(this.valid_3);
+  }
 }
-function main() {
-    let result = greet("Julian");
-    console.log(result);
-    result = greet("Carson");
-    console.log(result);
-}
-
-main();
+let example_5 = new d_1(true);
+let variable_6 = d.valid;
+d.flipValid();
 </code>
     </pre>
-  <h3>Nested Loops</h3>
+  <h3>Defining and Calling a Function</h3>
     <h4>Quanco</h4>
     <pre>
 <code>
-ruck scrum() -> void {
-    phase: int
-    tackle: int
-    for phase in range(1, 4) {
-        for tackle in range(1, 4) {
+def greet(name: str) -> str {
+    return "Try hard, " + name + "! Keep rucking!"
+}
+
+def x() -> void {
+    return
+}
+
+result: str = greet("Julian")
+print(result)
+result = greet("Carson")
+print(result)
+
+x()
+</code>
+    </pre>
+    <h4>JavaScript</h4>
+    <pre>
+<code>
+  function greet_1(name_2) {
+  return (("Try hard, " + name_2) + "! Keep rucking!");
+}
+function x_3() {
+  return;
+}
+let result_4 = greet_1("Julian");
+console.log(result_4);
+result_4 = greet_1("Carson");
+console.log(result_4);
+x_3()
+
+</code>
+    </pre>
+          <h3>Nested Loops</h3>
+    <h4>Quanco</h4>
+    <pre>
+<code>
+def scrum() -> void {
+    phase: num = 0
+    tackle: num = 0
+    for x: num = phase, x < 4, ++x {
+        for y: num = tackle, y < 4, ++y {
             print("Phase " + phase + ", Tackle " + tackle + " : Drive forward!")
         }
     }
@@ -152,238 +192,81 @@ scrum()
     <h4>JavaScript</h4>
     <pre>
 <code>
-  function scrum() {
-    for (let phase = 1; phase <= 3; phase++) {
-        for (let tackle = 1; tackle <= 3; tackle++) {
-            console.log(`Phase ${phase}, Tackle ${tackle}: Drive forward!`);
-        }
+function scrum_1() {
+  let phase_2 = 0;
+  let tackle_3 = 0;
+  for (let x_4 = phase_2; x_4 < 4; ++x_4) {
+    for (let y_5 = tackle_3; y_5 < 4; ++y_5) {
+      console.log((((("Phase " + phase_2) + ", Tackle ") + tackle_3) + " : Drive forward!"));
     }
+  }
 }
 
-scrum();
+scrum_1()
 </code>
     </pre>
           <h3>Recursion</h3>
     <h4>Quanco</h4>
     <pre>
 <code>
-ruck lineout(depth: int) -> int {
-    if depth == 0 {
-        pass 1
+def lineout(depth: num) -> num {
+    if (depth == 0) {
+        return 1
     }
     else {
-        pass depth * lineout(depth - 1)
+        return depth * lineout(depth - 1)
     }
 }
 
-result: int = lineout(5)
+result: num = lineout(5)
 print(result)
 </code>
     </pre>
     <h4>JavaScript</h4>
     <pre>
 <code>
-function lineout(depth) {
-    if (depth === 0) {
-        return 1;
-    } else {
-        return depth * lineout(depth - 1);
-    }
+function lineout_1(depth_2) {
+  if (depth_2 == 0) {
+    return 1;
+  } else {
+    return (depth_2 * lineout_1((depth_2 - 1)));
+  }
 }
-
-function main() {
-    const result = lineout(5);
-    console.log(result);  // Output: 120
-}
-
-main();
+let result_3 = lineout_1(5);
+console.log(result_3);
 </code>
     </pre>
-          <h3>Lists and Dictionaries</h3>
-    <h4>Quanco</h4>
-    <pre>
-<code>
-ruck maul() -> void {
-    players: list[str] = ["Julian", "Carson", "Ray"]
-    positions: dict[str, str] = {"Julian": "Flanker", "Carson": "Scrumhalf", "Ray": "Coach"}
-    player: str
-
-    for player in players {
-        position: str = positions.get(player, "sin bin")
-        print(player + " is in the " + position + " position")
-    }
-}
-
-maul()
-</code>
-    </pre>
-    <h4>JavaScript</h4>
-    <pre>
-<code>
-function maul() {
-    const players = ["Julian", "Carson", "Ray"];
-    const positions = { Julian: "Flyhalf", Carson: "Scrumhalf", Ray: "Coach" };
-
-    for (const player of players) {
-        const position = positions[player] || "sin bin";
-        console.log(`${player} is in the ${position} position`);
-    }
-}
-
-maul();
-</code>
-    </pre>
-           <h3>Structs and Classes</h3>
-    <h4>Quanco</h4>
-    <pre>
-<code>
-pitch RugbyPlayer {
-    ruck __init__(self, name: str, position: str, tries: int = 0) {
-        this.name: str = name
-        this.position: str = position
-        this.tries: int = tries
-    }
-
-    ruck scoreTry(self) -> void {
-        this.tries = 1
-        print(this.name + "scored a try! Total tries: " + this.tries)
-    }
-}
-
-optionalPlayer: RugbyPlayer | None = None
-player1: RugbyPlayer = RugbyPlayer("Julian", "Flanker")
-player1.scoreTry()
-
-optionalPlayer = RugbyPlayer("Carson", "Scrumhalf")
-optionalPlayer.scoreTry()
-</code>
-    </pre>
-    <h4>JavaScript</h4>
-    <pre>
-<code>
-class RugbyPlayer {
-    constructor(name, position, tries = 0) {
-        this.name = name;
-        this.position = position;
-        this.tries = tries;
-    }
-
-    scoreTry() {
-        this.tries += 1;
-        console.log(`${this.name} scored a try! Total tries: ${this.tries}`);
-    }
-}
-
-function main() {
-    let optionalPlayer = null;
-    const player1 = new RugbyPlayer("Julian", "Flyhalf");
-    player1.scoreTry();
-
-    optionalPlayer = new RugbyPlayer("Carson", "Scrumhalf");
-    optionalPlayer.scoreTry();
-}
-
-main();
-</code>
-    </pre>
+          
           <h3>Semantic Checks</h3>
     <pre>
 <code>
-[
-  [
-    "variable declarations",
-    `readonly x: num
-     y: str`,
-  ],
-  [
-    "variable assignments",
-    `readonly y: num = 0
-     z: str = "0"
-     a: bool = true
-     b: num = 0.0 - 1
-     c: none = none`,
-  ],
-  [
-    "function without parameters",
-    `def f() -> void {
-        return
-     }`,
-  ],
-  [
-    "function with parameters",
-    `def f(x: num, y: bool) -> bool {
-        return true
-    }`,
-  ],
-  [
-    "void function",
-    `def f(x: bool) -> void {
-        return
-     }`,
-  ],
-  [
-    "non-void function",
-    `def f(x: num) -> num {
-        return x 
-     }`,
-  ],
-  [
-    "class without constructor",
-    `class c {
-        this.x: num = 1
-     }`,
-  ],
-  [
-    "class with constructor",
-    `class d {
-        def __init__(self, x: bool) {
-            this.valid: bool = x
-        }
-     }`,
-  ],
-  [
-    "class with method",
-    `class d {
-        def __init__(self, x: bool) {
-            this.valid: bool = x
-        }
-        def flipValid(self) -> void {
-            this.valid = not this.valid
-        }
-     }`,
-  ],
-  [
-    "accessing class fields outside class",
-    `class d {
-        def __init__(self, x: bool) {
-            this.valid: bool = x
-        }
-        def flipValid(self) -> void {
-            this.valid = not this.valid
-        }
-     }
-     example: d = d(true)
-     variable: bool = d.valid`,
-  ],
-  [
-    "breaking for loop",
-    `for i: num = 0, i < 5, ++i {
-        if i == 2 {
-            break
-        }
-     }`,
-  ],
-  [
-    "breaking while loop",
-    `j: num = 0
-      while j <= 20 {
-        if j == 10 {
-          break
-        }
-        j += 2
-      }`,
-  ],
-];
+1. Type equivalence everywhere
+2. Loops<br>
+2a. Break can only be used in a loop<br>
+2b. An infinite for loop cannot be declared<br>
+2c. A non-executable for loop cannot be declared<br>
+2d. Entities in loop definition must match<br>
+2e. Must use conditional operator in for loop termination statement<br>
+2f. Must use step operator in for loop step statement
+3. Identifiers<br>
+3a. New identifiers must not already be defined (based on block unless global)<br>
+3b. Old identifiers must be defined
+4. Functions<br>
+4a. Can only use return within a function<br>
+4b. Function call arguments and function parameters must match<br>
+4bi. Function call arguments and function parameters must have the same types<br>
+4bii. Function call arguments and function parameters must be of the same quantity<br>
+4c. Checks for void functions that somehow return a value<br>
+4d. Checks for non-void functions that somehow do not return a value<br>
+4e. Function returns themselves must be compatible with function declaration
+5. Classes<br>
+5a. Constructor calls must be from a base that is a class<br>
+5b. Constructor call arguments and Constructor parameters must match<br>
+5bi. Constructor call arguments and Constructor parameters must have the same types<br>
+5bii. Constructor call arguments and Constructor parameters must be of the same quantity
+6. Variables<br>
+6a. Assignments outside of declaration can only happen to mutable variables.<br>
+6b. Union types are accepted.<br>
 </code>
     </pre>
         </div>
