--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Quanco - A language for the intersection of Rugby fans, and those who love general-purpose scripting languages, like Python and TypeScript.
+    A language for people who want a more robust, albeit annoying JS.
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
