--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 
   <!-- ***** Header ***** -->
-
+<img id="quanco" src="docs/QuancoLogo.png" width="600" height="600" />
   <header class="header" role="banner" id="top">
     <div class="row">
       <nav class="nav" role="navigation">
@@ -54,7 +54,11 @@
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
           <span>Quanco</span>
-          <img src="docs/QuancoLogo.png" width="600" height="600">
+          #quanco {
+          position: fixed;
+          top: 0;
+          right: 0;
+          }
         </h1>
         <!-- Put a small paragraph about yourself -->
         <p>A language for the intersection of Rugby fans, and those who love general-purpose scripting languages, like Python and TypeScript.</p>
