--- a/index.html
+++ b/index.html
@@ -36,12 +36,10 @@
 <body>
 
   <!-- ***** Header ***** -->
-<img id="quanco" src="docs/QuancoLogo.png" width="600" height="600" />
-  #quanco {
-          position: fixed;
-          top: 200;
-          right: 400;
-          }
+  <div style="position: relative;">
+   <img src="docs/QuancoLogo.png" width="600" height="600" style="position: absolute; left: 60px; top: 120px;">
+</div>
+  
   <header class="header" role="banner" id="top">
     <div class="row">
       <nav class="nav" role="navigation">
