--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@ console.log(result_3);
     <div class="row">  
       <p>
         https://github.com/c44rson/Quanco
+        docs/DRT07369.JPG
       </p>
   </footer>
 
