--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     A language for people who want a more robust, albeit annoying JS.
   </title>
 <div style="position: relative;">
-   <img src="docs/QuancoLogo.png" width="600" height="600" style="position: absolute; right: 1600px; top: 100px;">
+   <img src="docs/QuancoLogo.png" width="600" height="600" style="position: absolute; right: 200px; top: 100px;">
 </div>
   <meta name="description" content="Add small description of yourslef.">
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
@@ -283,6 +283,8 @@ console.log(result_3);
           <div class="about__text">
             <p>
               LMU CMSI 2026 and Loyola Rugby player. Co-Creator of Quanco
+              <img src="docs/IMG_1215.heic" width="400" height="400" style="position: absolute; right: 200px; top: 100px;">
+            
             </p>
           </div>
         </div>
@@ -291,6 +293,8 @@ console.log(result_3);
           <div class="about__text">
             <p>
               LMU CMSI 2026 and Loyola Rugby president. Co-Creator of Quanco
+              
+              <img src="docs/DRT07369.JPG" width="400" height="400" style="position: absolute; right: 200px; top: 100px;">
             </p>
           </div>
         </div>
@@ -305,7 +309,6 @@ console.log(result_3);
     <div class="row">  
       <p>
         https://github.com/c44rson/Quanco
-        docs/DRT07369.JPG
       </p>
   </footer>
 
