--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ console.log(result_3);
           <div class="about__text">
             <p>
               LMU CMSI 2026 and Loyola Rugby player. Co-Creator of Quanco
-              <img src="docs/IMG_1215.heic" width="400" height="400" style="position: absolute; right: 200px; top: 100px;">
+              <img src="docs/rugbypic.jpg" width="400" height="400" style="position: absolute; right: 200px; bottom: 1000px;">
             
             </p>
           </div>
@@ -294,7 +294,7 @@ console.log(result_3);
             <p>
               LMU CMSI 2026 and Loyola Rugby president. Co-Creator of Quanco
               
-              <img src="docs/DRT07369.JPG" width="400" height="400" style="position: absolute; right: 200px; top: 100px;">
+              <img src="docs/DRT07369.JPG" width="400" height="400" style="position: absolute; right: 200px; bottom: 200px;">
             </p>
           </div>
         </div>
