--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     A language for people who want a more robust, albeit annoying JS.
   </title>
 <div style="position: relative;">
-   <img src="docs/QuancoLogo.png" width="600" height="600" style="position: absolute; right: 600px; top: 100px;">
+   <img src="docs/QuancoLogo.png" width="600" height="600" style="position: absolute; right: 0px; top: 100px;">
 </div>
   <meta name="description" content="Add small description of yourslef.">
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
@@ -283,7 +283,7 @@ console.log(result_3);
           <div class="about__text">
             <p>
               LMU CMSI 2026 and Loyola Rugby player. Co-Creator of Quanco
-              <img src="docs/rugbypic.jpg" width="400" height="400" style="position: absolute; right: 200px; bottom: 1000px;">
+              <img src="docs/rugbypic.jpg" width="400" height="400" right: 200px; bottom: 1000px;">
             
             </p>
           </div>
@@ -294,7 +294,7 @@ console.log(result_3);
             <p>
               LMU CMSI 2026 and Loyola Rugby president. Co-Creator of Quanco
               
-              <img src="docs/DRT07369.JPG" width="400" height="400" style="position: absolute; right: 200px; bottom: 200px;">
+              <img src="docs/DRT07369.JPG" width="400" height="400" right: 200px; bottom: 200px;">
             </p>
           </div>
         </div>
