--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     A language for people who want a more robust, albeit annoying JS.
   </title>
 <div style="position: relative;">
-   <img src="docs/QuancoLogo.png" width="600" height="600" style="position: absolute; right: 0px; top: 100px;">
+   <img src="docs/QuancoLogo.png" width="600" height="600" style="position: absolute; right: 100px; top: 100px;">
 </div>
   <meta name="description" content="Add small description of yourslef.">
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
@@ -283,9 +283,7 @@ console.log(result_3);
           <div class="about__text">
             <p>
               LMU CMSI 2026 and Loyola Rugby player. Co-Creator of Quanco
-              <img src="docs/rugbypic.jpg" width="400" height="400" right: 200px; bottom: 1000px;">
-            
-            </p>
+            </p><img src="docs/rugbypic.jpg" width="400" height="400">
           </div>
         </div>
         <h2>About Carson</h2>
@@ -293,9 +291,7 @@ console.log(result_3);
           <div class="about__text">
             <p>
               LMU CMSI 2026 and Loyola Rugby president. Co-Creator of Quanco
-              
-              <img src="docs/DRT07369.JPG" width="400" height="400" right: 200px; bottom: 200px;">
-            </p>
+            </p><img src="docs/DRT07369.JPG" width="400" height="400">
           </div>
         </div>
       </div>
