--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     A language for people who want a more robust, albeit annoying JS.
   </title>
 <div style="position: relative;">
-   <img src="docs/QuancoLogo.png" width="600" height="600" style="position: absolute; right: 100px; top: 100px;">
+   <img src="docs/QuancoLogo.png" width="600" height="600" style="position: absolute; right: 20px; top: 100px;">
 </div>
   <meta name="description" content="Add small description of yourslef.">
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
@@ -289,9 +289,10 @@ console.log(result_3);
         <h2>About Carson</h2>
         <div class="about__content">
           <div class="about__text">
+            <img src="docs/DRT07369.JPG" width="500" height="500">
             <p>
               LMU CMSI 2026 and Loyola Rugby president. Co-Creator of Quanco
-            </p><img src="docs/DRT07369.JPG" width="400" height="400">
+            </p>
           </div>
         </div>
       </div>
