--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     A language for people who want a more robust, albeit annoying JS.
   </title>
 <div style="position: relative;">
-   <img src="docs/QuancoLogo.png" width="600" height="600" style="position: absolute; right: 700px; top: 100px;">
+   <img src="docs/QuancoLogo.png" width="600" height="600" style="position: absolute; right: 560px; top: 100px;">
 </div>
   <meta name="description" content="Add small description of yourslef.">
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
@@ -281,7 +281,7 @@ console.log(result_3);
         <h2>About Julian</h2>
         <div class="about__content">
           <div class="about__text">
-            <img src="docs/rugbypic.jpg" width="600" height="600" style="position: absolute; right: 700px; top: 100px;">
+            <img src="docs/rugbypic.jpg" width="600" height="600" style="position: fixed; right: 1400px; top: 100px;">
             <p>
               LMU CMSI 2026 and Loyola Rugby player. Co-Creator of Quanco
             </p>
@@ -290,7 +290,7 @@ console.log(result_3);
         <h2>About Carson</h2>
         <div class="about__content">
           <div class="about__text">
-            <img src="docs/DRT07369.JPG" width="600" height="600" style="position: absolute; right: 700px; top: 100px;">
+            <img src="docs/DRT07369.JPG" width="600" height="600" style="position: fixed; right: 1400px; top: 100px;">
             <p>
               LMU CMSI 2026 and Loyola Rugby president. Co-Creator of Quanco
             </p>
