--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ console.log(result_3);
         <h2>About Julian</h2>
         <div class="about__content">
           <div class="about__text">
-            <img src="docs/rugbypic.jpg" width="600" height="600" style="position: fixed; right: 1400px; top: 100px;">
+            <img src="docs/rugbypic.jpg" width="550" height="550">
             <p>
               LMU CMSI 2026 and Loyola Rugby player. Co-Creator of Quanco
             </p>
@@ -290,7 +290,7 @@ console.log(result_3);
         <h2>About Carson</h2>
         <div class="about__content">
           <div class="about__text">
-            <img src="docs/DRT07369.JPG" width="600" height="600" style="position: fixed; right: 1400px; top: 100px;">
+            <img src="docs/DRT07369.JPG" width="550" height="550">
             <p>
               LMU CMSI 2026 and Loyola Rugby president. Co-Creator of Quanco
             </p>
