--- a/index.html
+++ b/index.html
@@ -240,33 +240,33 @@ console.log(result_3);
           <h3>Semantic Checks</h3>
     <pre>
 <code>
-1. Type equivalence everywhere
-2. Loops<br>
-2a. Break can only be used in a loop<br>
-2b. An infinite for loop cannot be declared<br>
-2c. A non-executable for loop cannot be declared<br>
-2d. Entities in loop definition must match<br>
-2e. Must use conditional operator in for loop termination statement<br>
-2f. Must use step operator in for loop step statement
-3. Identifiers<br>
-3a. New identifiers must not already be defined (based on block unless global)<br>
-3b. Old identifiers must be defined
-4. Functions<br>
-4a. Can only use return within a function<br>
-4b. Function call arguments and function parameters must match<br>
-4bi. Function call arguments and function parameters must have the same types<br>
-4bii. Function call arguments and function parameters must be of the same quantity<br>
-4c. Checks for void functions that somehow return a value<br>
-4d. Checks for non-void functions that somehow do not return a value<br>
-4e. Function returns themselves must be compatible with function declaration
-5. Classes<br>
-5a. Constructor calls must be from a base that is a class<br>
-5b. Constructor call arguments and Constructor parameters must match<br>
-5bi. Constructor call arguments and Constructor parameters must have the same types<br>
-5bii. Constructor call arguments and Constructor parameters must be of the same quantity
-6. Variables<br>
-6a. Assignments outside of declaration can only happen to mutable variables.<br>
-6b. Union types are accepted.<br>
+1. Type equivalence everywhere<br>
+2. Loops
+2a. Break can only be used in a loop
+2b. An infinite for loop cannot be declared
+2c. A non-executable for loop cannot be declared
+2d. Entities in loop definition must match
+2e. Must use conditional operator in for loop termination statement
+2f. Must use step operator in for loop step statement<br>
+3. Identifiers
+3a. New identifiers must not already be defined (based on block unless global)
+3b. Old identifiers must be defined<br>
+4. Functions
+4a. Can only use return within a function
+4b. Function call arguments and function parameters must match
+4bi. Function call arguments and function parameters must have the same types
+4bii. Function call arguments and function parameters must be of the same quantity
+4c. Checks for void functions that somehow return a value
+4d. Checks for non-void functions that somehow do not return a value
+4e. Function returns themselves must be compatible with function declaration<br>
+5. Classes
+5a. Constructor calls must be from a base that is a class
+5b. Constructor call arguments and Constructor parameters must match
+5bi. Constructor call arguments and Constructor parameters must have the same types
+5bii. Constructor call arguments and Constructor parameters must be of the same quantity<br>
+6. Variables
+6a. Assignments outside of declaration can only happen to mutable variables.
+6b. Union types are accepted.
 </code>
     </pre>
         </div>
