--- a/index.html
+++ b/index.html
@@ -307,9 +307,7 @@ console.log(result_3);
 
   <footer role="contentinfo" class="footer">
     <div class="row">  
-      <p>
-        https://github.com/c44rson/Quanco
-      </p>
+      <a href="https://github.com/c44rson/Quanco">Github Repository</a>
   </footer>
 
   <a href="#top" class="back-to-top" title="Back to Top">
