--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
         <ul class="nav__items">
           <li class="nav__item"><a href="#our-story" class="nav__link">Our Story</a></li>
           <li class="nav__item"><a href="#examples" class="nav__link">Examples</a></li>
-          <li class="nav__item">
-            <a href="#about" class="nav__link">About</a>
-          </li>
+          <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+          <li class="nav_item"><a href="https://github.com/c44rson/Quanco">Source Code</a></li>
         </ul>
       </nav>
     </div>
@@ -311,7 +310,6 @@ console.log(result_3);
   </footer>
 
   <a href="#top" class="back-to-top" title="Back to Top">
-    <img src="./images/arrow-up.svg" alt="Back to Top" class="back-to-top__image"/>
   </a>
   <script src="./index.js"></script>
 </body>
