--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li class="nav__item"><a href="#our-story" class="nav__link">Our Story</a></li>
           <li class="nav__item"><a href="#examples" class="nav__link">Examples</a></li>
           <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-          <li class="nav_item"><a href="https://github.com/c44rson/Quanco">Source Code</a></li>
+          <li class="nav__item"><a href="https://github.com/c44rson/Quanco">Source Code</a></li>
         </ul>
       </nav>
     </div>
